=maj notes pnn ; css liens footer

--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
 
 <h2 id="et-c-est-tout">Et c&rsquo;est tout ?</h2>
 
-<p>Oui. L&rsquo;éthique minimale réside dans ces 3 seuls principes. Pour en savoir plus, une présentation détaillée <!-- de l'éthique minimale et --> de chacun des principes est disponible sur ce site.</p>
+<p>Oui. L&rsquo;éthique minimale réside dans ces 3 seuls principes. Pour une présentation détaillée de chacun des principes, cliquez les 3 liens dans la section ci-dessus.</p>
 
 </div>
 
@@ -139,8 +139,6 @@
   </div>
 
   <script src='/js/main.af838dd5.js'></script>
-  
-    <script src='/js/custom.js'></script>
   
 
 </body>
